--- a/src/CSS/start.css
+++ b/src/CSS/start.css
@@ -4,10 +4,16 @@
 }
 
 .buscador {
-    margin-top: 80px;
+    margin-top:40px;
     margin-bottom: 5px;
 }
 
 .Want {
-    margin-top: 50px;
+    margin-top: 20px;
+}
+.formatoFoto{
+    width:300px;
+   
+    justify-content: center;
+    margin: 0 auto;
 }
